fixing overflow?

--- a/src/Styles/ImageSlider.css
+++ b/src/Styles/ImageSlider.css
@@ -2,8 +2,9 @@
 
 }
 
+
 .ImageSlider{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     position: fixed;
     left:0;
